--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-
+    <link rel="stylesheet" href="style.css" />
     <title>Hello, world!</title>
   </head>
   <body>
@@ -20,37 +20,58 @@
 
 
 
-    <!-- hero -->
+    <!-- Hero -->
     <div class="hero--background-image">
-       <img class="images/hero.jpg"/>
+      <!-- Action bar -->
+      <div class="hero--action-bar">
+        <div class="container">
+          <div class="row zipcode-column">
+            <div class="col-sm-3">
+              <img src="images/location.png" alt="Location" height="30"> Tampa, FL
+            </div>
+            <div class="col-sm-9">
+              <form id="form-zipcode" class="form-zipcode">
+                <i>
+                  Check Availability
+                </i>
+                <input name="zipcode" type="text" placeholder="Enter your zipcode" class="form-control"/>
+                <button class="btn btn-primary btn-theme-green" type="submit">Go</button>
+              </form>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- /Action bar  -->
 
-       <!-- Button trigger modal -->
-       <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
-         Launch demo modal
-       </button>
+      <!-- Button trigger modal -->
+      <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
+        Launch demo modal
+      </button>
 
-       <!-- Modal -->
-       <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-         <div class="modal-dialog" role="document">
-           <div class="modal-content">
-             <div class="modal-header">
-               <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
-               <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                 <span aria-hidden="true">&times;</span>
-               </button>
-             </div>
-             <div class="modal-body">
-               ...
-             </div>
-             <div class="modal-footer">
-               <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-               <button type="button" class="btn btn-primary">Save changes</button>
-             </div>
-           </div>
-         </div>
-       </div>
+      <!-- Modal -->
+      <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body">
+              ...
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+              <button type="button" class="btn btn-primary">Save changes</button>
+            </div>
+          </div>
+        </div>
+      </div>
 
     </div>
+
+
 
     <!-- action bar -->
     <div class="hero--action-bar">
