--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                   Check Availability
                 </i>
                 <input name="zipcode" type="text" placeholder="Enter your zipcode" class="form-control"/>
-                <button class="btn btn-primary btn-theme-green" type="submit">Go</button>
+                <button class="btn btn-primary btn-theme-green" type="button"data-toggle="modal" data-target="#exampleModal">Go</button>
               </form>
             </div>
           </div>
@@ -44,7 +44,7 @@
       <!-- /Action bar  -->
 
       <!-- Button trigger modal -->
-      <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
+      <button type="button" class="btn btn-primary">
         Launch demo modal
       </button>
 
