--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
                 <i>
                   Check Availability
                 </i>
-                <input name="zipcode" type="text" placeholder="Enter your zipcode" class="form-control"/>
-                <button class="btn btn-primary btn-theme-green" type="button"data-toggle="modal" data-target="#exampleModal">Go</button>
+                <input id="zipcode" name="zipcode" type="text" placeholder="Enter your zipcode" class="form-control"/>
+                <button id="go-btn" class="btn btn-primary btn-theme-green" type="button"data-toggle="modal" data-target="#exampleModal">Go</button>
               </form>
             </div>
           </div>
@@ -43,10 +43,7 @@
       </div>
       <!-- /Action bar  -->
 
-      <!-- Button trigger modal -->
-      <button type="button" class="btn btn-primary">
-        Launch demo modal
-      </button>
+
 
       <!-- Modal -->
       <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
@@ -59,7 +56,16 @@
               </button>
             </div>
             <div class="modal-body">
-              ...
+                <!-- form -->
+                <form>
+                  <div class="form-group">
+                    <label for="exampleInputEmail1">Email address</label>
+                    <input type="text" id="modal--zipcode" />
+                    <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+                  </div>
+
+                  <button type="submit" class="btn btn-primary">Submit</button>
+                </form>
             </div>
             <div class="modal-footer">
               <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
@@ -125,5 +131,6 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <script src="script.js"></script>
   </body>
 </html>
