--- a/index.html
+++ b/index.html
@@ -77,30 +77,11 @@
 
     </div>
 
-
-
-    <!-- action bar -->
-    <div class="hero--action-bar">
-     <div class="container">
-      <div class="row">
-        <div class="col-sm-3">
-          [ICON] Tampa,FL
-        </div>
-        <div class="col-sm-9">
-          [ZIPCODE]
-        </div>
-      </div>
-    </div>
-   </div>
-
-
-
-
     <!-- junk removal -->
     <div class="row featurette">
       <div class="col-md-7">
-        <h2 class="featurette-heading">First featurette heading. <span class="text-muted">It’ll blow your mind.</span></h2>
-        <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+        <h2 class="featurette-heading text-center"> Tampa Bay area junk removal <span class="text-muted"></span></h2>
+        <p class="lead"> words </p>
       </div>
       <div class="col-md-5">
         <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: 500x500"><title>Placeholder</title><rect width="100%" height="100%" fill="#eee"></rect><text x="50%" y="50%" fill="#aaa" dy=".3em">500x500</text></svg>
