corrected section 2 with help of instructors

--- a/index.html
+++ b/index.html
@@ -78,15 +78,28 @@
     </div>
 
     <!-- junk removal -->
+    <div class="container my-5">
     <div class="row featurette">
       <div class="col-md-7">
-        <h2 class="featurette-heading text-center"> Tampa Bay area junk removal <span class="text-muted"></span></h2>
-        <p class="lead"> words </p>
+        <h2 class="featurette-heading">
+          Tampa Bay Area Junk Removal
+        </h2>
+        <p class="lead">
+          Whether it's residential or commercial, we're happy to remove your trash so you don't have to!
+        </p>
+        <button type="button" class="btn btn-dark btn-lg">
+          Book Now
+        </button>
+        <button type="button" class="btn btn-link btn-lg btn-link-dark">
+          Items We Remove
+        </button>
       </div>
       <div class="col-md-5">
-        <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: 500x500"><title>Placeholder</title><rect width="100%" height="100%" fill="#eee"></rect><text x="50%" y="50%" fill="#aaa" dy=".3em">500x500</text></svg>
+        <img src="images/junk.jpg" class="featurette-image img-fluid mx-auto" width="500" height="500" />
       </div>
+     </div>
     </div>
+
     <!-- Veteran owned -->
     <div class="container text-center">
         <p>Veteran owned </p>
