changed button format

--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
         <button type="button" class="btn btn-dark btn-lg">
           Book Now
         </button>
-        <button type="button" class="btn btn-link btn-lg btn-link-dark">
-          Items We Remove
+        <button type="button" class="btn btn-link btn-lg btn-link-dark" color=black >
+          <u>Items We Remove</u> 
         </button>
       </div>
       <div class="col-md-5">
