added veteran owned section

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
           Book Now
         </button>
         <button type="button" class="btn btn-link btn-lg btn-link-dark" color=black >
-          <u>Items We Remove</u> 
+          <u>Items We Remove</u>
         </button>
       </div>
       <div class="col-md-5">
@@ -101,8 +101,33 @@
     </div>
 
     <!-- Veteran owned -->
-    <div class="container text-center">
-        <p>Veteran owned </p>
+           <div class="bg-light text-center py-5">
+           <div class="container text-center my-5">
+           <div class="row">
+           <div class="col">
+            <img src="images/veteran-owned--black.png" width="130" />
+             <h2 class="my-5">
+              G.I.HAUL is ready to service your junk removal needs in the Tampa Bay Area today!
+             </h2>
+            <div class="veteran-owned-points">
+              <p>
+                We're Veteran Owned & Operated.
+              </p>
+              <p>
+                We'll Pick Up Just About Any Junk.
+              </p>
+              <p>
+                We'll beat any written junk removal estimate.
+              </p>
+            </div>
+
+             <button type="button" class="btn btn-dark btn-lg mt-4">
+              Request a Quote
+             </button>
+          </div>
+        </div>
+      </div>
+    </div>
 
     </div>
     <!-- instaham -->
