formatting correction in 'veteran owned' section.

--- a/index.html
+++ b/index.html
@@ -107,7 +107,8 @@
            <div class="col">
             <img src="images/veteran-owned--black.png" width="130" />
              <h2 class="my-5">
-              G.I.HAUL is ready to service your junk removal needs in the Tampa Bay Area today!
+              G.I.HAUL is ready to service your junk removal<br>
+               needs in the Tampa Bay Area today!
              </h2>
             <div class="veteran-owned-points">
               <p>
