added ratings & what we haul

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
             <img src="images/veteran-owned--black.png" width="130" />
              <h2 class="my-5">
               G.I.HAUL is ready to service your junk removal<br>
-               needs in the Tampa Bay Area today!
+               needs in the <i>Tampa Bay Area</i> today!
              </h2>
             <div class="veteran-owned-points">
               <p>
@@ -132,20 +132,130 @@
 
     </div>
     <!-- instaham -->
-    <div class="conatiner">
+    <div class="container-fluid instagram-container">
+    <div class="row">
+      <div class="col pl-0">
+        <a href="https://www.instagram.com/g.i.haul/" target="_blank" title="G.I.HAUL on Instagram">
+          <div class="position-relative">
+            <img src="images/ig-1.jpg" class="w-100" />
+            <img class="ig-logo" src="images/ig-logo.png" />
+          </div>
+        </a>
+      </div>
+      <div class="col pr-0">
+        <a href="https://www.instagram.com/g.i.haul/" target="_blank" title="G.I.HAUL on Instagram">
+          <div class="position-relative">
+            <img src="images/ig-2.jpg" class="w-100" />
+            <img class="ig-logo" src="images/ig-logo.png" />
+          </div>
+        </a>
+      </div>
+    </div>
+  </div>
+    <!-- ratings -->
+    <div class="container text-center my-5">
       <div class="row">
         <div class="col">
-          <h3>image 1</h3>
-        <div class="col">
-          <h3>image2</h3>
+          <h2 class="mb-0">
+            Top Rated Junk Removal
+          </h2>
+          <p class="ratings-subtext mt-0">
+            See what our customers say about us
+          </p>
         </div>
-
-        </div>
-
       </div>
-
+      <div class="row mt-5">
+        <div class="col-sm-4 text-center py-4">
+          <a href="https://www.google.com/search?source=hp&ei=Ds2MXKjkDKrt5gL-55eoCA&q=gihaul&btnK=Google+Search&oq=gihaul&gs_l=psy-ab.3..0i10l4.1356.1940..2370...0.0..0.277.616.6j0j1......0....1..gws-wiz.....0..35i39j0i131j0j0i10i30j0i30.JPy4MyejdlY#btnK=Google%20Search&lrd=0x8834f2236099a589:0x970c3c166e51ba39,1" target="_blank" title="G.I.HAUL Google Ratings">
+            <img src="images/google.png" height="100" />
+          </a>
+        </div>
+        <div class="col-sm-4 text-center py-4">
+          <a href="https://www.homeadvisor.com/rated.GIHaul.82214115.html" target="_blank" title="G.I.HAUL Home Advisor Ratings">
+            <img src="images/home-advisor.png" height="100" />
+          </a>
+        </div>
+        <div class="col-sm-4 text-center py-4">
+          <a href="https://www.facebook.com/pg/gihaulpittsburgh/reviews/?ref=page_internal" target="_blank" title="G.I.HAUL Facebook Reviews">
+            <img src="images/facebook.png" height="100" />
+          </a>
+        </div>
+      </div>
     </div>
-    <!-- ratings -->
+
+    <!-- Junk We Remove -->
+    <div class="bg-light mb-2">
+      <div class="container">
+        <div class="row">
+          <div class="col">
+            <h2 class="my-3">
+              Junk we remove
+            </h2>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="bg-light py-3">
+      <div class="container">
+        <div class="row">
+          <div class="col junk-we-remove--text">
+            <p>
+              Whether it's residential or commercial, we're happy to remove your trash so you don't have to!
+            </P>
+            <ul>
+              <li>Refrigerator and freezer removal</li>
+              <li>Hot tub and jacuzzi removal</li>
+              <li>Furniture removal</li>
+              <li>Swingset and Trampoline removal</li>
+              <li>Television removal</li>
+              <li>Appliance Removal</li>
+              <li>Business Junk Removal</li>
+              <li>Oven and stove removal</li>
+              <li>Old clutter removal</li>
+              <li>Yard debris removal</li>
+              <li>Waste removal</li>
+              <li>Garbage removal</li>
+              <li>Contractor garbage and waste removal</li>
+              <li>Don't see your item on our list? <a class="text-link-dark" href="#contact" title="Contact Us">Contact us</a>.</li>
+            </ul>
+
+            <div class="text-center my-5">
+              <button type="button" class="btn btn-dark btn-lg mt-4">
+                Request a Quote
+              </button>
+            </div>
+
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Why Hire us -->
+    <div class="container my-5">
+      <div class="row featurette">
+        <div class="col-md-7">
+          <h2 class="featurette-heading">
+            Why Hire G.I.Haul?
+          </h2>
+          <p class="lead">
+            Our hassle free services allow you to go about your life, well we do the heavy lifting for you. New customers get $35 off.
+          </p>
+          <button type="button" class="btn btn-dark btn-lg">
+            Book Now
+          </button>
+        </div>
+        <div class="col-md-5">
+          <img src="images/beach.jpg" class="featurette-image img-fluid mx-auto" width="500" height="500" />
+        </div>
+      </div>
+    </div>
+
+
+    <!-- footer -->
+
+
+
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
