more format to veteran owned

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css" />
-    <title>Hello, world!</title>
+    <title>GI Haul</title>
   </head>
   <body>
     <!-- navbar -->
@@ -111,13 +111,13 @@
                needs in the <i>Tampa Bay Area</i> today!
              </h2>
             <div class="veteran-owned-points">
-              <p>
+              <p class="veteran-owned-points">
                 We're Veteran Owned & Operated.
               </p>
-              <p>
+              <p class="veteran-owned-points">
                 We'll Pick Up Just About Any Junk.
               </p>
-              <p>
+              <p class="veteran-owned-points">
                 We'll beat any written junk removal estimate.
               </p>
             </div>
