changing font size.

--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@
            <div class="col">
             <img src="images/veteran-owned--black.png" width="130" />
              <h2 class="my-5">
-              G.I.HAUL is ready to service your junk removal<br>
-               needs in the <i>Tampa Bay Area</i> today!
+              <strong> G.I.HAUL is ready to service your junk removal<br>
+               needs in the <i>Tampa Bay Area</i> today!</strong>
              </h2>
             <div class="veteran-owned-points">
               <p class="veteran-owned-points">
