--- a/index.html
+++ b/index.html
@@ -106,18 +106,18 @@
            <div class="row">
            <div class="col">
             <img src="images/veteran-owned--black.png" width="130" />
-             <h2 class="my-5">
+             <h2 class="my-5 veteran-owned-title">
               <strong> G.I.HAUL is ready to service your junk removal<br>
                needs in the <i>Tampa Bay Area</i> today!</strong>
              </h2>
             <div class="veteran-owned-points">
-              <p class="veteran-owned-points">
+              <p>
                 We're Veteran Owned & Operated.
               </p>
-              <p class="veteran-owned-points">
+              <p>
                 We'll Pick Up Just About Any Junk.
               </p>
-              <p class="veteran-owned-points">
+              <p>
                 We'll beat any written junk removal estimate.
               </p>
             </div>
