--- a/index.html
+++ b/index.html
@@ -48,30 +48,61 @@
       <!-- Modal -->
       <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog" role="document">
+         <form>
           <div class="modal-content">
             <div class="modal-header">
-              <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+              <h5 class="modal-title" id="exampleModalLabel">Request a Quote</h5>
               <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                 <span aria-hidden="true">&times;</span>
               </button>
             </div>
             <div class="modal-body">
                 <!-- form -->
-                <form>
-                  <div class="form-group">
-                    <label for="exampleInputEmail1">Email address</label>
-                    <input type="text" id="modal--zipcode" />
-                    <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
-                  </div>
 
-                  <button type="submit" class="btn btn-primary">Submit</button>
-                </form>
+
+                  <form>
+                    <div class="form-group">
+                      <label for="exampleFormControlInput1">Email address</label>
+                      <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+                    </div>
+                    <div class="form-group">
+                      <label for="exampleFormControlInput1">Telephone number</label>
+                      <input type="tel" class="form-control" id="exampleFormControlInput2" placeholder="Your phone number">
+                    </div>
+                    <div class="form-group">
+                      <label for="exampleFormControlInput1">Zipcode</label>
+                      <input type="text" class="form-control" id="modal--zipcode" placeholder="Your zipcode">
+                    </div>
+
+                    <div class="form-group">
+                      <label for="exampleFormControlSelect1">Type of job</label>
+                      <select class="form-control" id="exampleFormControlSelect1">
+                        <option>Commercial</option>
+                        <option>Residential</option>
+                      </select>
+                    </div>
+                    <div class="form-group">
+                      <label for="exampleFormControlSelect1">Frequency</label>
+                      <select class="form-control" id="exampleFormControlSelect2">
+                        <option>One time pick-up</option>
+                        <option>Bi-weekly</option>
+                        <option>Monthly</option>
+                      </select>
+                    </div>
+
+                    <div class="form-group">
+                      <label for="exampleFormControlTextarea1">Brief description of job</label>
+                      <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                    </div>
+
+
             </div>
             <div class="modal-footer">
               <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
               <button type="button" class="btn btn-primary">Save changes</button>
             </div>
           </div>
+         </form>
         </div>
       </div>
 
