--- a/index.html
+++ b/index.html
@@ -12,12 +12,26 @@
   </head>
   <body>
     <!-- navbar -->
-    <nav class="navbar navbar-light bg-light">
-      <a class="navbar-brand" href="#">
-        <img src="/docs/4.3/assets/brand/bootstrap-solid.svg" width="30" height="30" alt="">
-      </a>
-    </nav>
+    <nav class="navbar navbar-expand-md navbar-light">
+        <img src="images/gihaul--logo.png" alt="GI Haul" height="60">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="true" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="navbar-collapse collapse show" id="navbarCollapse" style="">
+          <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+              <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Contact</a>
+            </li>
+          </ul>
 
+        </div>
+      </nav>
 
 
     <!-- Hero -->
@@ -48,7 +62,6 @@
       <!-- Modal -->
       <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog" role="document">
-         <form>
           <div class="modal-content">
             <div class="modal-header">
               <h5 class="modal-title" id="exampleModalLabel">Request a Quote</h5>
@@ -60,30 +73,30 @@
                 <!-- form -->
 
 
-                  <form>
+                  <form id="form-quote" name="quote">
                     <div class="form-group">
                       <label for="exampleFormControlInput1">Email address</label>
-                      <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+                      <input name="email" type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
                     </div>
                     <div class="form-group">
                       <label for="exampleFormControlInput1">Telephone number</label>
-                      <input type="tel" class="form-control" id="exampleFormControlInput2" placeholder="Your phone number">
+                      <input name="phone" type="tel" class="form-control" id="exampleFormControlInput2" placeholder="Your phone number">
                     </div>
                     <div class="form-group">
                       <label for="exampleFormControlInput1">Zipcode</label>
-                      <input type="text" class="form-control" id="modal--zipcode" placeholder="Your zipcode">
+                      <input name="zipcode" type="text" class="form-control" id="modal--zipcode" placeholder="Your zipcode">
                     </div>
 
                     <div class="form-group">
                       <label for="exampleFormControlSelect1">Type of job</label>
-                      <select class="form-control" id="exampleFormControlSelect1">
+                      <select name="job-type" class="form-control" id="exampleFormControlSelect1">
                         <option>Commercial</option>
                         <option>Residential</option>
                       </select>
                     </div>
                     <div class="form-group">
                       <label for="exampleFormControlSelect1">Frequency</label>
-                      <select class="form-control" id="exampleFormControlSelect2">
+                      <select name="frequency" class="form-control" id="exampleFormControlSelect2">
                         <option>One time pick-up</option>
                         <option>Bi-weekly</option>
                         <option>Monthly</option>
@@ -98,8 +111,7 @@
 
             </div>
             <div class="modal-footer">
-              <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-              <button type="button" class="btn btn-primary">Save changes</button>
+              <button type="submit" class="btn btn-primary">Submit</button>
             </div>
           </div>
          </form>
@@ -284,14 +296,45 @@
 
 
     <!-- footer -->
+    <footer>
+    <div class="container">
+      <div class="row p-y-6 footer-top">
+       <div class="col-md-12">
+          <p>
+            <h1>Tampa Bay Junk Removal</h1>
+            <a href="#" class="how-it-works">How It Works</a>
+            <a href="#" class="reviews">Junk Reviews</a>
+            <a href="#" class="book-now">Book Now</a>
+          </p>
+       </div>
+     </div>
+    </div>
+    <div class="container">
+      <div class="row footer-bottom">
+        <div class="col-md-12" align="center">
+          <div class="footer-image">
+            <img src="images/gihaul-logo--footer.jpg" alt="GI HAUL">
+          </div>
+          <h2>CALL 1-855-8GI-HAUL</h2>
+        </div>
+        <div class="col-md-12 bottom-links" align="center">
+            <a href="#" class="product-sales">Product Sales</a>
+            <a href="#" class="terms-service">Terms of Service</a>
+            <a href="#" class="privacy-policy">Privacy Policy</a>
+        </div>
 
+      </div>
 
+    </div>
+  </footer>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <script src="js/jquery.serializeObject.js"></script>
     <script src="script.js"></script>
+
   </body>
 </html>
