--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
               <a class="nav-link" href="#">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Contact</a>
+              <a class="nav-link" href="contact/index.html">Contact</a>
             </li>
           </ul>
 
@@ -317,8 +317,8 @@
           </div>
           <h2>CALL 1-855-8GI-HAUL</h2>
         </div>
-        <div class="col-md-12 bottom-links" align="center">
-            <a href="#" class="product-sales">Product Sales</a>
+        <div class="col-md-12" align="center">
+            <a href="#" class="product-sales">Franchise Opportunities</a>
             <a href="#" class="terms-service">Terms of Service</a>
             <a href="#" class="privacy-policy">Privacy Policy</a>
         </div>
